# gci

./: README.md  pyproject.toml
gci/: main.py
gci/app/: interface.py  main_window.py
